--- a/utility/utility.vcxproj
+++ b/utility/utility.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="public\utility\HelloWorld.hpp" />
     <ClInclude Include="public\utility\MemoryBuffer.hpp" />
     <ClInclude Include="public\utility\Object.hpp" />
+    <ClInclude Include="public\utility\Singleton.hpp" />
     <ClInclude Include="public\utility\Vector.hpp" />
   </ItemGroup>
   <ItemGroup>
