--- a/ms3d/ms3d.vcxproj
+++ b/ms3d/ms3d.vcxproj
@@ -44,7 +44,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>../utility/public;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../utility/public;../graphics/public;../platform/public;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -57,7 +57,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>../utility/public;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../utility/public;../graphics/public;../platform/public;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -69,6 +69,12 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\graphics\graphics.vcxproj">
+      <Project>{f0bf97d1-0367-44ce-8fe5-64350a536485}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\platform\platform.vcxproj">
+      <Project>{46cbc38b-c631-4d81-941c-0b51addd5acd}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\utility\utility.vcxproj">
       <Project>{03c6d42b-4fea-4a3e-af1d-cdd0c0729dc3}</Project>
     </ProjectReference>
