--- a/utility/utility.vcxproj.filters
+++ b/utility/utility.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="public\utility\Singleton.hpp">
       <Filter>Header Files\public</Filter>
     </ClInclude>
+    <ClInclude Include="public\utility\Defs.hpp">
+      <Filter>Header Files\public</Filter>
+    </ClInclude>
+    <ClInclude Include="public\utility\Color.hpp">
+      <Filter>Header Files\public</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Object.cpp">
