--- a/ms3d/ms3d.vcxproj
+++ b/ms3d/ms3d.vcxproj
@@ -66,6 +66,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="App.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -78,6 +79,9 @@
     <ProjectReference Include="..\utility\utility.vcxproj">
       <Project>{03c6d42b-4fea-4a3e-af1d-cdd0c0729dc3}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="App.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
