--- a/ms3d/ms3d.vcxproj
+++ b/ms3d/ms3d.vcxproj
@@ -85,6 +85,9 @@
     <ClInclude Include="App.hpp" />
     <ClInclude Include="Game.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\shaders.glsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
