--- a/utility/utility.vcxproj
+++ b/utility/utility.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="public\utility\Object.hpp" />
     <ClInclude Include="public\utility\Geom.hpp" />
     <ClInclude Include="public\utility\Singleton.hpp" />
+    <ClInclude Include="public\utility\StringView.hpp" />
     <ClInclude Include="public\utility\Vector.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +86,7 @@
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="MemoryBuffer.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="StringView.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
