--- a/libpng/libpng.vcxproj
+++ b/libpng/libpng.vcxproj
@@ -11,18 +11,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{03C6D42B-4FEA-4A3E-AF1D-CDD0C0729DC3}</ProjectGuid>
-    <RootNamespace>utility</RootNamespace>
+    <ProjectGuid>{3C2C530B-1813-4914-B9A7-47E94C44F737}</ProjectGuid>
+    <RootNamespace>libpng</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -43,9 +43,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>CompilingUtilityDLL;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>./public/;</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>./public/libpng/;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -57,9 +57,8 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>CompilingUtilityDLL;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>./public/;</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>./public/libpng/;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -68,26 +67,51 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="public\utility\Closure.hpp" />
-    <ClInclude Include="public\utility\Color.hpp" />
-    <ClInclude Include="public\utility\Defs.hpp" />
-    <ClInclude Include="public\utility\DLL_API.hpp" />
-    <ClInclude Include="public\utility\HelloWorld.hpp" />
-    <ClInclude Include="public\utility\Matrix.hpp" />
-    <ClInclude Include="public\utility\MemoryBuffer.hpp" />
-    <ClInclude Include="public\utility\Object.hpp" />
-    <ClInclude Include="public\utility\Geom.hpp" />
-    <ClInclude Include="public\utility\ObjectHash.h" />
-    <ClInclude Include="public\utility\Singleton.hpp" />
-    <ClInclude Include="public\utility\StringView.hpp" />
-    <ClInclude Include="public\utility\Vector.hpp" />
+    <ClInclude Include="public\libpng\crc32.h" />
+    <ClInclude Include="public\libpng\deflate.h" />
+    <ClInclude Include="public\libpng\inffast.h" />
+    <ClInclude Include="public\libpng\inffixed.h" />
+    <ClInclude Include="public\libpng\inflate.h" />
+    <ClInclude Include="public\libpng\inftrees.h" />
+    <ClInclude Include="public\libpng\png.h" />
+    <ClInclude Include="public\libpng\pngconf.h" />
+    <ClInclude Include="public\libpng\trees.h" />
+    <ClInclude Include="public\libpng\zconf.h" />
+    <ClInclude Include="public\libpng\zconf.in.h" />
+    <ClInclude Include="public\libpng\zlib.h" />
+    <ClInclude Include="public\libpng\zutil.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="HelloWorld.cpp" />
-    <ClCompile Include="Matrix.cpp" />
-    <ClCompile Include="MemoryBuffer.cpp" />
-    <ClCompile Include="Object.cpp" />
-    <ClCompile Include="StringView.cpp" />
+    <ClCompile Include="adler32.c" />
+    <ClCompile Include="compress.c" />
+    <ClCompile Include="crc32.c" />
+    <ClCompile Include="deflate.c" />
+    <ClCompile Include="gzio.c" />
+    <ClCompile Include="infback.c" />
+    <ClCompile Include="inffast.c" />
+    <ClCompile Include="inflate.c" />
+    <ClCompile Include="inftrees.c" />
+    <ClCompile Include="minigzip.c" />
+    <ClCompile Include="png.c" />
+    <ClCompile Include="pngerror.c" />
+    <ClCompile Include="pnggccrd.c" />
+    <ClCompile Include="pngget.c" />
+    <ClCompile Include="pngmem.c" />
+    <ClCompile Include="pngpread.c" />
+    <ClCompile Include="pngread.c" />
+    <ClCompile Include="pngrio.c" />
+    <ClCompile Include="pngrtran.c" />
+    <ClCompile Include="pngrutil.c" />
+    <ClCompile Include="pngset.c" />
+    <ClCompile Include="pngtrans.c" />
+    <ClCompile Include="pngvcrd.c" />
+    <ClCompile Include="pngwio.c" />
+    <ClCompile Include="pngwrite.c" />
+    <ClCompile Include="pngwtran.c" />
+    <ClCompile Include="pngwutil.c" />
+    <ClCompile Include="trees.c" />
+    <ClCompile Include="uncompr.c" />
+    <ClCompile Include="zutil.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
