--- a/utility/utility.vcxproj.filters
+++ b/utility/utility.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="public\utility\StringView.hpp">
       <Filter>Header Files\public</Filter>
     </ClInclude>
+    <ClInclude Include="public\utility\ObjectHash.h">
+      <Filter>Header Files\public</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Object.cpp">
