--- a/utility/utility.vcxproj
+++ b/utility/utility.vcxproj
@@ -46,6 +46,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>CompilingUtilityDLL;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>./public/;</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>
+      </DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -60,6 +62,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>CompilingUtilityDLL;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>./public/;</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>
+      </DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
