--- a/utility/utility.vcxproj
+++ b/utility/utility.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="public\utility\Defs.hpp" />
     <ClInclude Include="public\utility\DLL_API.hpp" />
     <ClInclude Include="public\utility\HelloWorld.hpp" />
+    <ClInclude Include="public\utility\LispContext.hpp" />
     <ClInclude Include="public\utility\Matrix.hpp" />
     <ClInclude Include="public\utility\MemoryBuffer.hpp" />
     <ClInclude Include="public\utility\Object.hpp" />
@@ -91,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HelloWorld.cpp" />
+    <ClCompile Include="LispContext.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="MemoryBuffer.cpp" />
     <ClCompile Include="Object.cpp" />
