--- a/utility/utility.vcxproj.filters
+++ b/utility/utility.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="public\utility\LispExpressions.hpp">
       <Filter>Header Files\public</Filter>
     </ClInclude>
+    <ClInclude Include="StringTable.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Object.cpp">
