--- a/utility/utility.vcxproj.filters
+++ b/utility/utility.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="StringTable.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="public\utility\Assert.hpp">
+      <Filter>Header Files\public</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Object.cpp">
@@ -102,6 +105,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LispParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Assert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
